--- a/style.css
+++ b/style.css
@@ -1,66 +1,67 @@
 *{
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  background-color: aqua;
-}
-
-#carousel {
+.container-slider{
   height: 400px;
   width: 800px;
   position: relative;
-  margin: 30px auto;
-  
+  display: flex;
 }
-#carousel .gallery {
+
+.slider{
+  height: 400px;
+  width: 800px;
+}
+
+.slide{
   height: 100%;
-}
-#carousel img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 15px;
+  object-fit:cover;
   display: none;
 }
 
-#carousel img.active {
-  display: block;
+.slide img{
+  height: 100%;
+  width: 100%;
+  object-fit:cover;
+
 }
-#carousel .bi {
+
+.slide.active {
+    display: block;
+  }
+
+.arrows{
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top: 50%;
-  font-size: 2rem;
+  justify-content: space-between;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+button{
+  border-radius: 20px;
+  border: 0px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  transition-duration: 1s;
+}
+
+button:hover{
   cursor: pointer;
-  translate: 0 -50%;
-}
-#prev{
-  left: -40px;
-}
-#next{
-  right: -40px;
+  background-color: black;
 }
 
-
-
-#thumbnails{
-    width: 700px;
-    height: 80px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-#thumbnails img {
-    
-    height: 100%;
-    width: 19%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.active{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  display: block;
 }
